# math-IA

./: README.md  meson.build
Matplot++-1.2.0-Linux/lib/cmake/Matplot++/: Matplot++Config.cmake  Matplot++Targets-release.cmake  Matplot++Targets.cmake
src/: main.cpp  meson.build
